test/error/error-mesh-indirect-ptr.base
error-mesh-indirect-ptr.sc:6:3: error: mesh field element must be non-pointer type
  int* a;
  ^
error-mesh-indirect-ptr.sc:14:5: error: mesh field element must be non-pointer type
    foo f;
    ^
error-mesh-indirect-ptr.sc:12:3: warning: declaration does not declare anything [-Wmissing-declarations]
  uniform mesh MyMesh{
  ^~~~~~~
1 warning and 2 errors generated.
